# submission_folder

./: .gitignore  CLAUDE.md  MATHEMATICAL_IMPROVEMENTS.md  NOVELTY_AND_BREAKTHROUGHS.md  PoC.ipynb  README.md  RESULTS.md  circuitkv_debug.csv  commands.txt  context.txt  idea.md  ideas.md  init_strategy_comparison.ipynb  log.txt  read.txt  read_jan26.txt  run.sh  test_eviction.py
.claude/agents/: 01_MATH_REVIEWER.md  02_NOVELTY_CHECKER.md  03_CODING_AGENT.md  04_ANALYST_AGENT.md  05_PM_AGENT.md  06_DOCUMENTATION_AGENT.md  07_ABLATION_STRATEGIST.md  08_PAPER_DRAFTER.md  09_BENCHMARK_ORCHESTRATOR.md
CircuitKV/: instructions.md  logic.md  proof_of_concept.md  pyproject.toml  requirements.txt  setup.py  test_landmark_walker.py
CircuitKV/circuit_kv/: __init__.py  breakthroughs.py  engine.py  utils.py
CircuitKV/csrc/: circuit_manager.cpp  circuit_manager.h  compat.h  pybind.cpp
CircuitKV/csrc/include/: kernels.h
CircuitKV/csrc/kernels/: circuit_walker.cu  common.cuh  graph_update.cu  influence_walker.cu  landmark_absorbing_walker.cu  landmark_walker.cu  spectral_power.cu  streaming_neumann.cu
KVCache-Factory/: benchmark_overhead.py  eval.py  metrics.py  poc_neumann_distribution.py  requirements.txt  run_ablation_figures.sh  run_intuitive_figures.sh  run_longbench.py  run_needle_in_haystack.py  run_observation_analysis_slurm.sh  run_ruler.py  seval.py  test_implicit_damping.py  verify_entropy.py  verify_entropy_scored.py
KVCache-Factory/csrc/: build.py
KVCache-Factory/pyramidkv/: llama_model.py  mistral_model.py  monkeypatch.py  pyramidkv_utils.py  qwen2_model.py
(+7 files in other folders)
